--- a/public/admin/main/view/layout/part/pageSidebar.html
+++ b/public/admin/main/view/layout/part/pageSidebar.html
@@ -27,16 +27,16 @@
             <li><a href="#/main/ws/index"><i class="icon-bubbles4"></i> <span>WebSocket</span></a></li>
             <li><a href="#/main/ws/ocr"><i class="icon-sort-time-asc"></i> <span>OCR示例</span></a></li>
             <li>
-                <a><i class="icon-pencil3"></i> <span>图片管理</span></a>
+                <a><i class="icon-image2"></i> <span>图片管理</span></a>
                 <ul>
-                    <li class="main-photo-storeAddView"><a href="#/main/photo/storeListView"><i class="icon-sort-time-asc"></i> <span>图片库</span></a></li>
+                    <li class="main-photo-storeAddView"><a href="#/main/photo/storeListView"><span>图片库</span></a></li>
                 </ul>
             </li>
             <li>
-                <a><i class="icon-pencil3"></i> <span>插件示例</span></a>
+                <a><i class="icon-laptop"></i> <span>插件示例</span></a>
                 <ul>
-                    <li><a href="#/main/wechat/menu"><i class="icon-sort-time-asc"></i> <span>微信菜单</span></a></li>
-                    <li><a href="#/main/form/ueditor"><i class="icon-sort-time-asc"></i> <span>ueditor编辑器</span></a></li>
+                    <li><a href="#/main/wechat/menu"> <span>微信菜单</span></a></li>
+                    <li><a href="#/main/form/ueditor"><span>ueditor编辑器</span></a></li>
                 </ul>
             </li>
             <!-- /定时任务 -->
@@ -44,7 +44,7 @@
             <!-- 用户管理 -->
             <li class="navigation-header"><span>用户管理</span> <i class="icon-menu" title="用户管理"></i></li>
             <li>
-                <a><i class="icon-pencil3"></i> <span>管理员用户（后台）</span></a>
+                <a><i class="icon-users"></i> <span>管理员用户（后台）</span></a>
                 <ul>
                     <li class="main-admin-memberEditView"><a class="power-menu  power-menu-4" href="#/main/admin/memberListView">用户管理</a></li>
                     <li class="main-admin-groupEditView"><a class="power-menu  power-menu-5" href="#/main/admin/groupListView">分组管理</a></li>
